<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:orientation="vertical"
>
    <android.support.constraint.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="275dp" android:layout_weight="1"
            android:id="@+id/constraintLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/rest_name"
                android:layout_width="0dp"
                android:layout_height="38dp" android:id="@+id/restaurant_detail_name" android:layout_weight="1"
                android:textSize="18sp" android:textStyle="italic" android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <ImageView
                android:layout_width="321dp"
                android:layout_height="223dp" app:srcCompat="?attr/actionBarDivider" android:id="@+id/restaurant_item_image"
                android:layout_weight="1"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/restaurant_detail_name"
                app:layout_constraintEnd_toEndOf="@+id/restaurant_detail_name" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_name"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="32dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:id="@+id/linearLayout5" android:layout_marginStart="8dp" android:layout_marginEnd="8dp">
            <TextView
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_telephone_tag"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/tel"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="0dp" android:layout_marginStart="0dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="0dp"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/tel"
                    android:layout_height="match_parent" android:id="@+id/restaurant_detail_telphone"
                    android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_detail_open_time_tag"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_open_time_tag"
                    android:layout_margin="0dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
                android:layout_marginTop="8dp" android:id="@+id/linearLayout" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <TextView
                    android:text="@string/address"
                    android:id="@+id/restaurant_detail_address_tag"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/restaurant_detail_open_time_tag"
                    android:layout_marginEnd="8dp"
                    android:layout_margin="0dp"/>
            <TextView
                    android:text="@string/address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/restaurant_detail_address"
                    android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_detail_address_tag"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/restaurant_detail_open_time"
                    android:layout_margin="0dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" android:id="@+id/linearLayout2" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
            <TextView
                    android:text="@string/access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_access_tag"
                    android:layout_weight="1"
            />
            <TextView
                    android:text="@string/access"
                    android:layout_height="match_parent" android:id="@+id/restaurant_detail_access"
                    android:layout_weight="1"
                    android:layout_width="match_parent" android:textAlignment="center"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp">
            <TextView
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_open_time_tag"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/open_time"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="0dp" android:layout_marginStart="0dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="0dp"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/open_time"
                    android:layout_height="wrap_content" android:id="@+id/restaurant_detail_open_time"
                    android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@+id/restaurant_detail_open_time_tag"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/restaurant_detail_open_time_tag"
                    android:layout_margin="0dp"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
