<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:orientation="vertical"
                                             android:id="@+id/constraintLayout3">
    <android.support.constraint.ConstraintLayout
            android:layout_width="411dp"
            android:layout_height="275dp" android:layout_weight="1"
            android:id="@+id/constraintLayout"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/restName"
                android:layout_width="0dp"
                android:layout_height="38dp" android:id="@+id/RestNameTextView" android:layout_weight="1"
                android:textSize="18sp" android:textStyle="italic" android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <ImageView
                android:layout_width="321dp"
                android:layout_height="223dp" app:srcCompat="?attr/actionBarDivider" android:id="@+id/imageView"
                android:layout_weight="1"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/RestNameTextView"
                app:layout_constraintEnd_toEndOf="@+id/RestNameTextView" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/RestNameTextView"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_weight="1"
            android:id="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintVertical_bias="0.0" android:layout_marginBottom="32dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:id="@+id/linearLayout5">
            <TextView
                    android:layout_height="wrap_content" android:id="@+id/telTagTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="wrap_content"
                    android:text="@string/tel"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="0dp" android:layout_marginStart="0dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="0dp"
                    app:layout_constraintVertical_bias="0.0"/>
            <TextView
                    android:text="@string/tel"
                    android:layout_height="match_parent" android:id="@+id/telTextView" android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toEndOf="@+id/telTagTextView"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/telTagTextView" android:layout_margin="0dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                app:layout_constraintStart_toStartOf="@+id/linearLayout5"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
                android:layout_marginTop="8dp" android:id="@+id/linearLayout">
            <TextView
                    android:text="@string/address"
                    android:id="@+id/addressTagTextView"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="wrap_content"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/telTagTextView" android:layout_marginEnd="8dp"
                    android:layout_margin="0dp"/>
            <TextView
                    android:text="@string/address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" android:id="@+id/addressTextView" android:layout_weight="1"
                    android:textSize="12sp" android:textAlignment="center"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/addressTagTextView"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/telTextView"
                    android:layout_margin="0dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp">
            <TextView
                    android:text="@string/access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/accessTagTextView" android:layout_weight="1"
            />
            <TextView
                    android:text="@string/access"
                    android:layout_height="match_parent" android:id="@+id/accessTextView" android:layout_weight="1"
                    android:layout_width="match_parent" android:textAlignment="center"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
